add_executable(day02p1 day02p1.cpp)
add_executable(day02p2 day02p2.cpp)
if(CLANG_TIDY_COMMAND)
    set_target_properties(day02p1 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
    set_target_properties(day02p2 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
endif()
if(CPPCHECK_COMMAND)
    set_target_properties(day02p1 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
    set_target_properties(day02p2 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
endif()
