add_executable(day03p1 day03p1.cpp)
add_executable(day03p2 day03p2.cpp)
if(CLANG_TIDY_COMMAND)
    set_target_properties(day03p1 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
    set_target_properties(day03p2 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
endif()
if(CPPCHECK_COMMAND)
    set_target_properties(day03p1 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
    set_target_properties(day03p2 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
endif()
