add_executable(day04p1 day04p1.cpp)
add_executable(day04p2 day04p2.cpp)
if(CLANG_TIDY_COMMAND)
    set_target_properties(day04p1 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
    set_target_properties(day04p2 PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_COMMAND}")
endif()
if(CPPCHECK_COMMAND)
    set_target_properties(day04p1 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
    set_target_properties(day04p2 PROPERTIES CXX_CPPCHECK "${CPPCHECK_COMMAND}")
endif()
